# baxter_ros_ws

.catkin_tools/profiles/default/: config.yaml  devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/baxter_core_msgs/: .catkin  .rosinstall  setup.sh
devel/.private/baxter_description/: .catkin  setup.sh
devel/.private/baxter_maintenance_msgs/: .catkin  local_setup.sh
devel/.private/catkin_tools_prebuild/: .catkin  local_setup.sh  setup.sh
devel/.private/display_baxter_trajectory/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/rethink_ee_description/: .catkin
devel/include/baxter_core_msgs/: AnalogIOState.h  AnalogIOStates.h  AnalogOutputCommand.h  AssemblyState.h  AssemblyStates.h  CameraControl.h  CameraSettings.h  CloseCamera.h  CloseCameraRequest.h  CloseCameraResponse.h  CollisionAvoidanceState.h  CollisionDetectionState.h  DigitalIOState.h  DigitalIOStates.h  DigitalOutputCommand.h  EndEffectorCommand.h  EndEffectorProperties.h  EndEffectorState.h  EndpointState.h  EndpointStates.h  HeadPanCommand.h  HeadState.h  JointCommand.h  ListCameras.h  ListCamerasRequest.h  ListCamerasResponse.h  NavigatorState.h  NavigatorStates.h  OpenCamera.h  OpenCameraRequest.h  OpenCameraResponse.h  RobustControllerStatus.h  SEAJointState.h  SolvePositionIK.h  (+3 more)
src/: README.md
src/camera_description/: CMakeLists.txt  package.xml
src/camera_description/urdf/: camera.urdf
src/display_baxter_trajectory/: CMakeLists.txt  package.xml
(+253 files in other folders)
